--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ doks:
     color_theme: # Available themes: blue (default), green, purple, red and yellow
     header:
         logo:
-            text: Project name
+            text: $Pac Master Node Guide
             image:
         nav:
             - item_name: Item 1
