--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Theme settings
 doks:
-    baseurl: /pacmn/
-    ulr: https://therealdijida.github.io
+    baseurl: /pacmn
+    url: https://therealdijida.github.io
     color_theme: # Available themes: blue (default), green, purple, red and yellow
     header:
         logo:
