--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Theme settings
 doks:
-    baseurl: 
+    baseurl: /
     url: https://therealdijida.github.io/pacmn
     color_theme: # Available themes: blue (default), green, purple, red and yellow
     header:
