--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ feed.xml
 _site/feed.xml
 _site/first-steps/index.html
 _site/*
+.sass-cache/0ba2ab8d6bfc3b706ac2d2502df1a7116c8d4d05/_code.scssc
+_site/feed.xml
+_site/first-steps/index.html
+_site/index.html
+_site/troubleshooting/index.html
