--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ _site/feed.xml
 _site/first-steps/index.html
 _site/index.html
 _site/troubleshooting/index.html
+.sass-cache/0ba2ab8d6bfc3b706ac2d2502df1a7116c8d4d05/_code.scssc
