--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@ _site/first-steps/index.html
 _site/index.html
 _site/troubleshooting/index.html
 .sass-cache/0ba2ab8d6bfc3b706ac2d2502df1a7116c8d4d05/_code.scssc
+_site/blog-listings/index.html
+_site/blog-listings/index.html
+_site/default/index.html
+_site/feed.xml
+_site/first-steps/index.html
+_site/index.html
+_site/troubleshooting/index.html
+doks-theme/.DS_Store
